feat: location-aware profile search, reusable settings sidebar & customizable PlusButton
- ProfilesSearch:
  - Integrates useCountries / useStates / useCities, normalizing values (e.g. "Uruguay", "Montevideo")
  - Replaces filter icon with RiUserSearchLine / RiUserSearchFill toggle

- SettingsSidebar:
  - Now driven by `options` prop for dynamic navigation
  - Enables reuse in GroupSettings

- PlusButton:
  - Adds `color` palette prop (`emerald`, `amber`, `sky`)
  - Adds `slide` prop (`left`, `right`) for text animation

- ProfileHeader:
  - Standardizes responsive widths (e.g. `lg:min-w-4xl`) for consistent layout

- Group modules (WIP):
  - Adds GroupAbout, GroupCalendar, GroupPosts, GroupSettings, MembersSettings
  - Updates routing but leaves features incomplete

--- a/src/locales/en/profileGroup.json
+++ b/src/locales/en/profileGroup.json
@@ -109,6 +109,7 @@
       "name": "Group Name",
       "bio": "Bio",
       "country": "Country",
+      "state": "State",
       "city": "City",
       "genres": "Genres"
     },
@@ -116,8 +117,9 @@
       "name": "Enter group name",
       "bio": "Enter a short bio",
       "country": "Enter country",
+      "state": "Enter state",
       "city": "Enter city",
-      "genres": "Enter genres"
+      "genres": "Enter music genre"
     },
     "validations": {
       "name": "Group name is required"
