--- a/src/locales/en/settings.json
+++ b/src/locales/en/settings.json
@@ -72,7 +72,7 @@
     "buttons": {
       "saving": "Saving…",
       "save": "Save",
-      "saved": "Saved!"
+      "saved": "Saved ✓"
     }
   },
   "providers": {
