--- a/src/locales/es/settings.json
+++ b/src/locales/es/settings.json
@@ -72,7 +72,7 @@
     "buttons": {
       "saving": "Guardando…",
       "save": "Guardar",
-      "saved": "¡Guardado!"
+      "saved": "Guardado ✓"
     }
   },
   "providers": {
