feat: skeletons integration and LazyImage optimization across roles, ads, and profiles
- Added DisplayRoleInfoSkeleton and MediaSummarySkeleton for smoother loading in DisplayMusicInfo.
- Integrated RoleItemSkeleton and refined DisplayMusicInfo logic for per-role data fetching.
- Created AdCardSkeleton and AdsListSkeleton and used them in AdsPage and ProfileAds.
- Conditionally rendered title skeleton in ProfileAds when ads are loading for a profile.
- Replaced ProfileCardSkeleton and PostCardSkeleton with updated visual variants.
- Added GroupCardSkeleton for loading state in group listings.
- Introduced LazyImage component and refactored ProfileAvatar to defer image rendering until loaded.
- Improved user experience by preventing incomplete avatar flashes with skeleton fallback.
- Minor enhancements in lists, card grids, and media display to ensure layout consistency.

--- a/src/locales/en/profile.json
+++ b/src/locales/en/profile.json
@@ -39,7 +39,11 @@
     "group_join":"You joined the group",
     "group_member_left":"{{user}} left the group",
     "group_member_removed":"You were removed from the group by {{user}}",
-    "noNotifications": "You don't have notifications yet"
+    "noNotifications": "You don't have notifications yet",
+    "someone": "Someone",
+    "group_follow": "{{user}} started following your group “{{group}}”.",
+    "seeAll": "See all notifications",
+    "seeLess": "Show less"
   },
   "connection": {
     "loading": "Checking connection...",
