--- a/src/locales/en/ui.json
+++ b/src/locales/en/ui.json
@@ -20,7 +20,8 @@
     ],
     "tabs": {
       "posts": "Posts",
-      "profiles": "Profiles"
+      "profiles": "Profiles",
+      "groups": "Groups"
     }
   },
   "hashtags": {
