chore: complete migration of the entire app to TypeScript/TSX
- Converted all components and modules to TypeScript for improved type safety and maintainability
- Refactored codebase to leverage TypeScript features and catch potential issues early
- Prepared the app for more robust development and easier future enhancements

--- a/src/locales/en/profile.json
+++ b/src/locales/en/profile.json
@@ -89,9 +89,9 @@
         "bio": "Bio",
         "firstname": "First name",
         "lastname": "Last name",
-        "country": "Country",
-        "state": "State",
-        "neighborhood": "City",
+        "country": "Choose a country",
+        "state": "Choose a state",
+        "neighborhood": "Choose a city",
         "username": "Username",
         "genderDefault": "Choose your gender",
         "genderOptions": {
