--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -26,7 +26,9 @@
     "edit": "Edit",
     "cancel": "Cancel",
     "chooseOne": "Choose one",
-    "notAvailable": "N/A"
+    "notAvailable": "N/A",
+    "search": "Search...",
+    "default": "Choose an option"
   },
   "messages": {
     "success": {
