--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -26,7 +26,9 @@
     "edit": "Editar",
     "cancel": "Cancelar",
     "chooseOne": "Elige una opción",
-    "notAvailable": "N/D"
+    "notAvailable": "N/D",
+    "search": "Buscar...",
+    "default": "Elige una opción"
   },
   "messages": {
     "success": {
