--- a/src/locales/en/posts.json
+++ b/src/locales/en/posts.json
@@ -32,7 +32,8 @@
     },      
     "errors": {
       "title": "Title is required.",
-      "content": "Content must not be empty."
+      "content": "Content must not be empty.",
+      "contentRequired": "Content is required."
     }
   },
   "update": {
@@ -58,7 +59,8 @@
       "title=": "The title is required.",
       "content=": "The content cannot be empty.",
       "delete": "Error deleting the post. Please try again.",
-      "confirmDelete": "Are you sure you want to delete this post?"
+      "confirmDelete": "Are you sure you want to delete this post?",
+      "contentRequired": "Content is required."
     }
   },
   "likes": {
