Improve MediaSettings logic and UX; enhance media components
- Refactor and optimize MediaSettings for better user experience and reliability
- Add new media-related components: AudioMediaGrid, VideoMediaGrid, MediaModal
- Introduce media validation helpers for consistent URL checking
- Update MediaSection and MediaSummary for improved media handling
- Add new sitemap links in Footer for better SEO and navigation
- Minor adjustments in group components and PostCard styling (non-breaking)

--- a/src/locales/en/music.json
+++ b/src/locales/en/music.json
@@ -76,7 +76,9 @@
       "add": "Add",
       "update": "Update",
       "cancel": "Cancel",
-      "requiredType": "This field is required"
+      "requiredType": "This field is required",
+      "addDescription": "Share your favorite songs or videos to show your style!",
+      "editDescription": "Update your content to keep your profile fresh."
     },
     "player": {
       "unsupported": "Unsupported media type"
@@ -86,6 +88,19 @@
       "delete": "Delete",
       "seeMore": "See more",
       "add": "Add Media"
+    },
+    "types": {
+      "audio": "Audio",
+      "video": "Video"
+    },
+    "titles": {
+      "expand": "Expand Media",
+      "close": "Close Media",
+      "copyLink": "Copy Link",
+      "copied": "Link Copied",
+      "twitter": "Share on X",
+      "facebook": "Share on Facebook",
+      "instagram": "Share on Instagram"
     }
   },
   "errors": {
