--- a/src/locales/es/ui.json
+++ b/src/locales/es/ui.json
@@ -169,14 +169,17 @@
       "explore": "Explorar",
 
       "ads": "Anuncios de Músicos",
+      "createAd": "Crear Anuncio",
       "createPost": "Nueva Publicación",
       "chat": "Chat",
 
       "myMedia": "Mis Medios",
+      "uploadMedia": "Subir Medios",
       "matches": "Conexiones",
 
       "profile": "Mi Perfil",
       "createGroup": "Crear Grupo",
+      "settings": "Configuración",
       "login": "Iniciar Sesión",
       "signup": "Registrarse"
     }
