--- a/src/locales/en/ui.json
+++ b/src/locales/en/ui.json
@@ -180,6 +180,7 @@
       "profile": "My Profile",
       "createGroup": "Create Group",
       "settings": "Settings",
+      "admin": "Admin Dashboard",
       "login": "Log In",
       "signup": "Sign Up"
     }
