--- a/src/locales/es/ui.json
+++ b/src/locales/es/ui.json
@@ -180,6 +180,7 @@
       "profile": "Mi Perfil",
       "createGroup": "Crear Grupo",
       "settings": "Configuración",
+      "admin": "Panel de Administración",
       "login": "Iniciar Sesión",
       "signup": "Registrarse"
     }
